--- a/Example_AML_classification.ipynb
+++ b/Example_AML_classification.ipynb
@@ -155,9 +155,9 @@
    "outputs": [],
    "source": [
     "data_path = {\n",
-    "    \"AML\": \"/pstore/data/DS4/ssl_vs_al/data/matek/train/\",\n",
-    "    \"MLL\": \"/pstore/data/DS4/ssl_vs_al/data/matek/test/\",\n",
-    "    \"PBC\": \"/pstore/data/DS4/ssl_vs_al/data/matek/test/\",\n",
+    "    \"AML\": \"PATH_TO_DATA\",\n",
+    "    \"MLL\": \"PATH_TO_DATA\",\n",
+    "    \"PBC\": \"PATH_TO_DATA\",\n",
     "}\n",
     "\n",
     "equivalent_classes = {\n",
